@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-10-04T00:47:28Z",
-  "count_outdated" : 1041,
-  "uniques_outdated" : 647,
-  "count" : 1057,
-  "uniques" : 663,
+  "timestamp" : "2025-10-05T00:56:33Z",
+  "count_outdated" : 1042,
+  "uniques_outdated" : 648,
+  "count" : 1058,
+  "uniques" : 664,
   "clones" : [
-    {
-      "timestamp": "2025-09-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-21T00:00:00Z",
       "count": 2,
@@ -112,6 +103,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-10-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
