@@ -1,3 +1,12 @@
+2025-10-05T00:56:33Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18251759766 # 787
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-05
+* notice: last 14d: unq all: 6 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 647 1041 / 663 1057
+* notice: next accum: outdated-unq outdated-all / unq all: 648 1042 / 664 1058
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-09-20] / [2025-10-04]
+
 2025-10-04T00:47:28Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18237130854 # 786
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-04
